# whaletechtakehome

./: .env.example  .gitignore  CLAUDE.md  PROGRESS.md  PROJECT.md  README.md  SELECTION.md  docker-compose.yml  pyproject.toml
docs/: 音质排查复盘.md
scripts/: audio-off.sh  audio-on.sh  start-local.sh  start.sh  test_stt.py  test_tts.py
src/app/: config.py  logging_utils.py  main.py  pipeline.py
src/app/agent/: prompt.py  roster.py  tools.py
src/app/db/: repo.py  schema.sql
src/app/push/: wecom.py
src/app/services/: dashscope_stt.py  dashscope_tts.py
tests/: test_db.py  test_push.py
