[project]
name = "voice-gate"
version = "0.1.0"
description = "园区访客语音登记 Agent —— 语音门卫，采集车牌/单位/手机号/事由并推送企微"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # —— Web / 后端 ——
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    # —— 配置 ——
    "pydantic-settings>=2.6",
    # —— 推送 / HTTP ——
    "httpx>=0.27",
    # —— 数据库（async）——
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    # —— 百炼语音 SDK（CosyVoice TTS / Paraformer STT 用）——
    "dashscope>=1.20",
    # —— 编排（音频重型 extras：silero/local，放到阶段 1 再加）——
    "pipecat-ai[local,qwen,silero]>=0.0.50",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
